# miniscience_course_cpp

./: README.md
laba_1/: CMakeLists.txt  Whale.stl  sample1.cpp  sample2.cpp  sampleCircle.cpp  sampleCube.cpp  sampleCylinder.cpp
laba_2/: CMakeLists.txt  animation_with_velocity.webm  cube.cpp  cubic3d.cpp
laba_2/cube_step/: cube-step-0.vtu  cube-step-1.vtu  cube-step-10.vtu  cube-step-11.vtu  cube-step-12.vtu  cube-step-13.vtu  cube-step-14.vtu  cube-step-15.vtu  cube-step-16.vtu  cube-step-17.vtu  cube-step-18.vtu  cube-step-19.vtu  cube-step-2.vtu  cube-step-20.vtu  cube-step-21.vtu  cube-step-22.vtu  cube-step-23.vtu  cube-step-24.vtu  cube-step-25.vtu  cube-step-26.vtu  cube-step-27.vtu  cube-step-28.vtu  cube-step-29.vtu  cube-step-3.vtu  cube-step-30.vtu  cube-step-31.vtu  cube-step-32.vtu  cube-step-33.vtu  cube-step-34.vtu  cube-step-35.vtu  cube-step-36.vtu  cube-step-37.vtu  cube-step-38.vtu  cube-step-39.vtu  cube-step-4.vtu  cube-step-40.vtu  cube-step-41.vtu  cube-step-42.vtu  cube-step-43.vtu  cube-step-44.vtu  (+61 more)
